Added user and paginator bundles

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "src/vendor/symfony"]
 	path = src/vendor/symfony
 	url = git://github.com/symfony/symfony.git
+[submodule "src/vendor/bundles/Knplabs/PaginatorBundle"]
+	path = src/vendor/bundles/Knplabs/PaginatorBundle
+	url = git://github.com/knplabs/PaginatorBundle.git
+[submodule "src/vendor/bundles/FOS/UserBundle"]
+	path = src/vendor/bundles/FOS/UserBundle
+	url = git://github.com/FriendsOfSymfony/UserBundle.git
