--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule "src/vendor/doctrine-migrations"]
 	path = src/vendor/doctrine-migrations
 	url = https://github.com/doctrine/migrations.git
+[submodule "src/vendor/doctrine-data-fixtures"]
+	path = src/vendor/doctrine-data-fixtures
+	url = https://github.com/doctrine/data-fixtures.git
