--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,9 @@
 [submodule "src/vendor/doctrine-data-fixtures"]
 	path = src/vendor/doctrine-data-fixtures
 	url = https://github.com/doctrine/data-fixtures.git
+[submodule "src/vendor/bundles/Symfony/Bundle/DoctrineMigrationsBundle"]
+	path = src/vendor/bundles/Symfony/Bundle/DoctrineMigrationsBundle
+	url = https://github.com/symfony/DoctrineMigrationsBundle.git
+[submodule "src/vendor/bundles/Symfony/Bundle/DoctrineFixturesBundle"]
+	path = src/vendor/bundles/Symfony/Bundle/DoctrineFixturesBundle
+	url = https://github.com/symfony/DoctrineFixturesBundle.git
