--- a/src/config/phpunit.xml.dist
+++ b/src/config/phpunit.xml.dist
@@ -9,30 +9,42 @@
          processIsolation="false"
          stopOnFailure="false"
          syntaxCheck="false"
-         bootstrap="bootstrap.php.cache"
+         bootstrap="../app/bootstrap.php.cache"
 >
-  <testsuites>
-      <testsuite name="Project Test Suite">
-          <directory>../src/*/*Bundle/Tests</directory>
-          <directory>../src/*/Bundle/*Bundle/Tests</directory>
-      </testsuite>
-  </testsuites>
+    <logging>
+        <log type="coverage-html"   target="../build/coverage" charset="UTF-8"
+             yui="true" highlight="true" lowUpperBound="35" highLowerBound="70"/>
+        <log type="coverage-clover" target="../build/logs/clover.xml"/>
+        <log type="junit"           target="../build/logs/junit.xml" logIncompleteSkipped="false"/>
+        <log type="metrics-xml"     target="../build/logs/metrics.xml" />
+    </logging>
 
-  <!--
-  <php>
-      <server name="KERNEL_DIR" value="/path/to/your/app/" />
-  </php>
-  //-->
+    <testsuites>
+        <testsuite name="Project Test Suite">
+            <directory>../src/*/*Bundle/Tests</directory>
+            <directory>../src/*/Bundle/*Bundle/Tests</directory>
+        </testsuite>
+    </testsuites>
 
-  <filter>
-      <whitelist>
-          <directory>../src</directory>
-          <exclude>
-              <directory>../src/*/*Bundle/Resources</directory>
-              <directory>../src/*/*Bundle/Tests</directory>
-              <directory>../src/*/Bundle/*Bundle/Resources</directory>
-              <directory>../src/*/Bundle/*Bundle/Tests</directory>
-          </exclude>
-      </whitelist>
-  </filter>
+    <php>
+        <!--
+        <server name="KERNEL_DIR" value="/path/to/your/app/" />
+        -->
+        <ini name="date.timezone" value="Europe/London" />
+        <ini name="memory_limit" value="512M" />
+    </php>
+
+    <filter>
+        <whitelist>
+            <directory>../src</directory>
+            <exclude>
+                <directory>../src/Acme</directory>
+                <directory>../src/Moverati</directory>
+                <directory>../src/*/*Bundle/Resources</directory>
+                <directory>../src/*/*Bundle/Tests</directory>
+                <directory>../src/*/Bundle/*Bundle/Resources</directory>
+                <directory>../src/*/Bundle/*Bundle/Tests</directory>
+            </exclude>
+        </whitelist>
+    </filter>
 </phpunit>
